# pktvisor

./: .codecov.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  conanfile.py
.github/actions/build-cpp/: entrypoint.sh
.github/actions/build-go/: Dockerfile  entrypoint.sh
.github/workflows/: build-develop.yml  build-release.yml  build_cross.yml  build_debug.yml  code-ql.yml  codeql-go-python.yml  container-rescan.yaml
3rd/: CMakeLists.txt
3rd/timer/: CMakeLists.txt
automated_tests/: requirements.txt
automated_tests/features/steps/: utils.py
cmake/: CodeCoverage.cmake  conan_provider.cmake
cmd/pktvisor-reader/: CMakeLists.txt  main.cpp
cmd/pktvisord/: CMakeLists.txt  main.cpp
conan/corrade/: conandata.yml  conanfile.py
conan/corrade/cmake/: conan-corrade-vars.cmake
conan/corrade/patches/: 0001-fix-strerror_r-musl-compat.patch
docker/: Dockerfile  Dockerfile.alpine
docker/alpine/: entry.sh  run.sh
docs/superpowers/plans/: 2026-03-27-corrade-local-conan-recipe.md
docs/superpowers/specs/: 2026-03-27-corrade-local-conan-recipe-design.md
integration_tests/: CMakeLists.txt
k8s/: README.md  pktvisor-sidecar.yaml
libs/: CMakeLists.txt
libs/visor_dns/: DnsLayer.cpp  DnsLayer.h  DnsLayerEnums.h  DnsResource.cpp  DnsResource.h  DnsResourceData.cpp  DnsResourceData.h
libs/visor_http_client/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  HttpTypes.h  test_http_client.cpp
libs/visor_test/catch2/: otel_helpers.hpp
libs/visor_utils/: test_utils.cpp  utils.cpp  utils.h
recipes/corrade/: config.yml
recipes/corrade/all/: conandata.yml  conanfile.py
recipes/pcapplusplus/: config.yml
recipes/pcapplusplus/cmake/: conanfile.py
src/: AbstractMetricsManager.h  AbstractPlugin.cpp  AbstractPlugin.h  BuiltinPlugins.cpp  BuiltinPlugins.h  CMakeLists.txt  CoreRegistry.cpp  CoreRegistry.h  CoreServer.cpp  CorradeCompat.h  GeoDB.cpp  GeoDB.h  HandlerModulePlugin.h  InputModulePlugin.h  InputStream.h  MetricLabels.h  Metrics.cpp  Metrics.h  PluginRegistry.h  Policies.cpp  Policies.h  PrometheusSerializer.h  StreamHandler.h  Taps.h
src/handlers/: CMakeLists.txt  static_plugins.h
src/handlers/bgp/: BgpHandlerModulePlugin.cpp  BgpHandlerModulePlugin.h  BgpStreamHandler.cpp  BgpStreamHandler.h  CMakeLists.txt
src/handlers/bgp/tests/: test_bgp_layer.cpp
src/handlers/dhcp/: CMakeLists.txt  DhcpHandlerModulePlugin.cpp  DhcpHandlerModulePlugin.h  DhcpStreamHandler.cpp  DhcpStreamHandler.h
src/handlers/dhcp/tests/: test_dhcp_layer.cpp
src/handlers/dns/v1/: CMakeLists.txt  DnsHandlerModulePlugin.cpp  DnsHandlerModulePlugin.h  DnsStreamHandler.cpp  DnsStreamHandler.h
src/handlers/dns/v1/tests/: test_dns_layer.cpp
src/handlers/dns/v2/: CMakeLists.txt  DnsHandlerModulePlugin.cpp  DnsHandlerModulePlugin.h  DnsStreamHandler.cpp  DnsStreamHandler.h
src/handlers/dns/v2/tests/: test_dns_layer.cpp
src/handlers/flow/: CMakeLists.txt  FlowHandlerModulePlugin.cpp  FlowHandlerModulePlugin.h  FlowStreamHandler.cpp  FlowStreamHandler.h  test_flows.cpp
src/handlers/input_resources/: CMakeLists.txt  InputResourcesHandlerModulePlugin.cpp  InputResourcesHandlerModulePlugin.h  InputResourcesStreamHandler.cpp  InputResourcesStreamHandler.h  test_resources_layer.cpp
src/handlers/mock/: CMakeLists.txt  MockHandlerModulePlugin.cpp  MockHandlerModulePlugin.h  MockStreamHandler.h
src/handlers/net/v1/: CMakeLists.txt  NetHandlerModulePlugin.cpp  NetHandlerModulePlugin.h  NetStreamHandler.cpp  NetStreamHandler.h
src/handlers/net/v1/tests/: test_net_layer.cpp
src/handlers/net/v2/: CMakeLists.txt  NetHandlerModulePlugin.cpp  NetHandlerModulePlugin.h  NetStreamHandler.cpp  NetStreamHandler.h
src/handlers/net/v2/tests/: test_net_layer.cpp
src/handlers/netprobe/: CMakeLists.txt  NetProbeHandlerModulePlugin.cpp  NetProbeHandlerModulePlugin.h  NetProbeStreamHandler.cpp  NetProbeStreamHandler.h  README.md  test_net_probe.cpp
src/handlers/pcap/: CMakeLists.txt  PcapHandlerModulePlugin.cpp  PcapHandlerModulePlugin.h  PcapStreamHandler.cpp  PcapStreamHandler.h
src/handlers/pcap/tests/: test_pcap_layer.cpp
src/inputs/: static_plugins.h
src/inputs/dnstap/: CMakeLists.txt  DnstapInputModulePlugin.cpp  DnstapInputModulePlugin.h  DnstapInputStream.cpp  UnixFrameSession.h  WinFrameSession.h
src/inputs/flow/: CMakeLists.txt  FlowInputModulePlugin.cpp  FlowInputModulePlugin.h  FlowInputStream.cpp
src/inputs/mock/: CMakeLists.txt  MockInputModulePlugin.cpp  MockInputModulePlugin.h
src/inputs/netprobe/: CMakeLists.txt  DohProbe.cpp  DohProbe.h  HttpProbe.cpp  HttpProbe.h  NetProbe.h  NetProbeInputModulePlugin.cpp  NetProbeInputModulePlugin.h  NetProbeInputStream.cpp  NetProbeInputStream.h  PingProbe.cpp  PingProbe.h  TcpProbe.cpp  TcpProbe.h  test_netprobe.cpp
src/inputs/pcap/: CMakeLists.txt  PcapInputModulePlugin.cpp  PcapInputModulePlugin.h  PcapInputStream.cpp
src/tests/: test_geoip.cpp  test_handlers.cpp  test_metrics.cpp  test_module_plugins.cpp  test_policies.cpp  test_prometheus_serializer.cpp  test_taps.cpp
src/tests/fixtures/: nf1.pcap  nf7.pcap  sflow_ipv6.pcap  sflow_keyed.pcap
